--- a/tools.html
+++ b/tools.html
@@ -25,7 +25,7 @@
                 <td> <label for="known-api">api</label></td>
                 <td>
                     <select id="known-api">
-                        <option value="" >from url</option>
+                        <option value="" >-- from url --</option>
                     </select>
                 </td>
                 <td><button id="choose-api">select</button></td>
@@ -47,7 +47,9 @@
         <h4 class="containerTitle">query params</h4>
     </div>
     <div class="container">
-        <h4 class="containerTitle">response scheme</h4>
+        <h4 class="containerTitle">response</h4>
+        <button id="request">request</button>
+        <button id="copyResponse" disabled="disabled">copy response</button>
     </div>
 </div>
 <div class="right-column">
